--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.13",
         "laravel/tinker": "^2.10.1",
+        "php-imap/php-imap": "^5.0",
+        "phpmailer/phpmailer": "^6.11",
+        "predis/predis": "^3.2",
+        "rap2hpoutre/fast-excel": "^5.6",
+        "slowlyo/owl-admin": "^4.4",
+        "slowlyo/owl-dict": "^1.3",
+        "slowlyo/owl-operation-log": "^0.2.3",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
